Start porting widget code back to java and do some cleanup